--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 			i ask the lamp<br />
 			and the spinning clock<br />
 			i beg of the light<br />
-			and ticking and tocking of this worlds heart …beat<br /><br />
+			and the ticking and tocking of this worlds heart …beat<br /><br />
 
 			how much would it be<br />
 			to get back<br />
