--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
 			how much would it be<br />
 			to get back<br />
-			something lost<<br /><br />
+			something lost<br /><br />
 
 			i wonder<br /><br />
 			<br /><br /><br />
