--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 			why didn’t i listen? <br /><br />
 
 			and if they say, <br />
-			“at least you tried your best <br />
+			“at least you tried your best" <br />
 			you did not <br />
 			and there is no glory <br />
 			only pain <br />
