--- a/index.html
+++ b/index.html
@@ -526,6 +526,51 @@
 </section>
 
 
+<!-- template code for each poem entry -->
+<section class="poem-container">
+	<h2 class="ptitle" id="poem-title" title="{poem title}">it's easy</h2>
+		<details class="poem-body poem-title">
+		<summary class="description">
+			to tell
+		</summary>
+
+			<p>
+
+				when someone cares <br />
+				the feeling is real<br />
+				and slow<br />
+				you like being here with me<br />
+				in a sea <br />
+				a sea of love<br />
+				slow <br />
+				like forever by the little dippers <br />
+				i sing that song all the time <br />
+				because it reminds me of you <br />
+				and the things you do <br />
+				and i miss you too <br />
+				and it hurts <br />
+				because I’m strong <br />
+				and I don’t like feeling small<br />
+				i want to be hard <br />
+				and whole <br />
+				like a stone <br />
+				or a job well done <br />
+				like when kiss me in the morning <br />
+				kiss me tonight<br />
+				i will hear you out <br />
+				it is okay<br />
+				be easy <br />
+				let me in <br />
+				i can take it<br />
+				don't worry <br />
+				i can take it <br />
+
+
+
+			</p>
+
+</section>
+
 
 
 <footer>
