--- a/index.html
+++ b/index.html
@@ -548,14 +548,14 @@
 				because it reminds me of you <br />
 				and the things you do <br />
 				and i miss you too <br />
-				and it hurts <br />
+				and it leaves a scar <br />
 				because I’m strong <br />
 				and I don’t like feeling small<br />
 				i want to be hard <br />
 				and whole <br />
 				like a stone <br />
 				or a job well done <br />
-				like when kiss me in the morning <br />
+				like when you kiss me in the morning <br />
 				kiss me tonight<br />
 				i will hear you out <br />
 				it is okay<br />
