--- a/index.html
+++ b/index.html
@@ -571,6 +571,41 @@
 </section>
 
 
+<!-- template code for each poem entry -->
+<section class="poem-container">
+	<h2 class="ptitle" id="poem-title" title="{poem title}">when it goes</h2>
+		<details class="poem-body poem-title">
+		<summary class="description">
+			...
+		</summary>
+
+			<p>
+
+				whatever <br />
+				wherever<br />
+					tell me<br />
+					when you need me <br />
+				no rush<br />
+				no pressure<br />
+					take your time<br />
+				today tomorrow<br />
+					the day after tomorrow<br /><br />
+
+				or not<br />
+					but tell me<br />
+					that you don't need me<br /> <br />
+
+				either way <br />
+				you have me <br />
+				all of me <br />
+
+
+
+			</p>
+
+</section>
+
+
 
 <footer>
 	<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
