--- a/index.html
+++ b/index.html
@@ -605,6 +605,75 @@
 
 </section>
 
+<!-- template code for each poem entry -->
+<section class="poem-container">
+	<h2 class="ptitle" id="poem-title" title="{poem title}">touching souls</h2>
+		<details class="poem-body poem-title">
+		<summary class="description">
+			___
+		</summary>
+
+			<p>
+
+		Not far apart<br /><br />
+
+
+		Above us a sphere<br />
+		Light around the edges<br />
+		Your constellation <br />
+		And mine<br />
+		Stargazing and together<br />
+		Its cold at night<br />
+
+		A pack of coyotes<br />
+		Struggling for control<br />
+		Howling at the moon<br />
+		We howl too<br /><br />
+
+		The neighbors are either<br />
+		Drunk<br />
+		Or fucking<br />
+		They aren’t noisy<br />
+		Or nosy<br />
+		Like us<br /><br />
+
+		Every dry patch<br />
+		Of land<br />
+		In the desert<br />
+		Could be ours<br /><br />
+
+		A hare<br />
+		Some crystal shrooms<br />
+		A kaleidoscope desert<br />
+		Prehistoric birds<br />
+		Dogs <br />
+		So many dogs<br />
+		And us<br />
+		Running in and out<br />
+		Or sitting<br />
+		Still<br />
+		Watching<br />
+		Like the sheriff<br />
+		Or the old man<br />
+		At the bar<br />
+		That likes the blues<br />
+		And says I’m sorry<br /><br />
+
+		Old us<br />
+		On a sunny day<br />
+
+		Down the trail<br />
+		In the hills<br />
+		Tucked away<br />
+		Like a secret<br />
+		Worth keeping<br />
+
+
+
+			</p>
+
+</section>
+
 
 
 <footer>
