--- a/index.html
+++ b/index.html
@@ -615,10 +615,10 @@
 
 			<p>
 
-		Not far apart<br /><br />
+		not far apart<br /><br />
 
 
-		Above us a sphere<br />
+		bove us a sphere<br />
 		Light around the edges<br />
 		Your constellation <br />
 		And mine<br />
@@ -674,6 +674,49 @@
 
 </section>
 
+<!-- template code for each poem entry -->
+<section class="poem-container">
+	<h2 class="ptitle" id="poem-title" title="{poem title}">salio el sol</h2>
+		<details class="poem-body poem-title">
+		<summary class="description">
+			para ti
+		</summary>
+
+			<p>
+
+		y tu sonrisa<br /><br />
+		tu cuerpo<br />
+		tu alma<br />
+		te quiero<br />
+		muchisimo<br /><br />
+
+		mi angel<br /><br />
+
+		le pedi<br />
+		al universo<br />
+		que tu fruta<br />
+		naciera del arbol<br />
+		afuera de mi ventana<br /><br />
+
+		te veo<br />
+		cada vez<br />
+		que cierro<br />
+		mis ojos<br /><br />
+
+		tus ojos<br />
+		de miel <br />
+		tu piel<br />
+		mi corazon<br /><br />
+
+		tu sabes<br />
+		como me siento<br />
+		y te gusta<br />
+		a mi tambien<br /><br />
+
+
+			</p>
+
+</section>
 
 
 <footer>
